# catsyphon

./: .env.example  .gitignore  .mise.toml  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CODE_REVIEW_CHANGES.md  CODE_REVIEW_SUMMARY.md  FRONTEND_COMPLETE.md  README.md  TEST_REVIEW_SUMMARY.md  catsyphon  coverage.json  docker-compose.yml  pytest.ini
backend/: .dockerignore  Dockerfile  PARSER_IMPLEMENTATION.md  TEST_IMPROVEMENTS_SUMMARY.md  TEST_REVIEW_REPORT.md  batch_tag_direct.py  coverage.json  entrypoint.sh  pyproject.toml  startup_check.py
backend/scripts/: backfill_developers_from_paths.py  backfill_success_from_tags.py
backend/src/catsyphon/: bootstrap.py  cli.py  collector_client.py  config.py  daemon_manager.py  exceptions.py  startup.py  watch.py
backend/src/catsyphon/advisor/: __init__.py  detector.py  mcp_detector.py  models.py  prompts.py
backend/src/catsyphon/analytics/: thinking_time.py
backend/src/catsyphon/api/: app.py  (+2 more)
backend/tests/: conftest.py  test_api.py  test_api_benchmarks.py  test_api_collectors.py  test_api_conversations.py  test_api_ingestion.py  test_api_metadata.py  test_api_otel.py  test_api_plans.py  test_api_projects.py  test_api_security.py  test_api_setup.py  test_api_stats.py  test_api_upload.py  test_api_watch.py  test_auth_context.py  test_cli.py  test_collector_session_timestamps.py  test_config.py  test_connection.py  test_conversation_query_performance.py  test_cross_workspace_security.py  test_daemon_manager.py  test_deduplication.py  test_e2e_hierarchy_ingestion.py  test_file_filtering.py  test_hashing.py  test_ingestion_pipeline.py  test_main.py  test_mcp_detector.py  test_models_db.py  test_models_parsed.py  test_orphan_policy.py  test_otel_decoder.py  test_parsers_codex.py  test_parsers_registry.py  test_performance.py  test_pipeline_ingestion.py  test_pipeline_metrics.py  test_pipeline_orchestrator.py  (+4 more)
backend/tests/benchmarks/: README.md
backend/tests/test_acceptance/: __init__.py  test_dedup_prevents_double_ingest.py  test_incremental_reingest.py  test_ingest_and_query.py
backend/tests/test_canonicalization/: conftest.py  test_builders.py  test_models.py  test_repository.py  test_samplers.py  test_tokens.py
backend/tests/test_parsers/: __init__.py  test_chunked_parsing.py  test_claude_code_incremental.py  test_claude_code_parser.py  test_plan_extraction.py  test_plan_extraction_module.py  test_real_samples.py  test_registry.py  test_utils.py
backend/tests/test_plugins/: test_loader.py  test_manifest.py
backend/tests/test_repositories/: test_collector.py  test_conversation_repository.py  test_developer_race_condition.py  test_ingestion_job.py  test_organization.py  test_project_race_condition.py  test_watch_config.py  test_workspace.py
backend/tests/test_scanner/: test_scanner_core.py
backend/tests/test_tagging/: test_cache.py  test_canonical_tagging.py  test_llm_tagger.py  test_pipeline.py  test_providers.py
backend/tests/test_watch/: __init__.py  test_concurrent_processing.py  test_file_rename.py  test_file_watcher.py  test_retry_queue.py  test_watch_startup_scan.py  test_watcher_daemon.py
sdk/python/catsyphon-sdk/: README.md  pyproject.toml
(+320 files in other folders)
