[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "catsyphon"
version = "0.1.0"
description = "Coding agent conversation log analysis and insights tool"
requires-python = ">= 3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.12.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.6",
    "typer>=0.9.0",
    "httpx>=0.25.0",
    "python-dateutil>=2.8.0",
    "tqdm>=4.66.0",
    "rich>=13.0.0",
    "watchdog>=3.0.0",
    "python-daemon>=3.0.0",
    "psutil>=5.9.0",
    "tiktoken>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
    "types-python-dateutil>=2.8.0",
]

[project.scripts]
catsyphon = "catsyphon.cli:app"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/catsyphon --cov-report=term-missing"
pythonpath = ["src"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
