[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "catsyphon-sdk"
version = "0.1.0"
description = "Python SDK for CatSyphon - Push AI agent conversation logs to a centralized server"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "CatSyphon Contributors" }
]
keywords = ["ai", "agents", "logging", "observability", "claude", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "mypy>=1.8",
    "ruff>=0.3",
]

[project.urls]
Homepage = "https://github.com/kulesh/catsyphon"
Documentation = "https://github.com/kulesh/catsyphon/tree/main/sdk/python/catsyphon-sdk"
Repository = "https://github.com/kulesh/catsyphon"

[tool.hatch.build.targets.wheel]
packages = ["src/catsyphon_sdk"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
strict = true
python_version = "3.10"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
